# resume-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  xt_lifecycle_report.html  如何从0到1准备硅谷PM面试.html  简历.md  简历投递全流程.md
agent/: applicant_tracker.py  client.py  customizer.py  daily_job_scanner.py  generator.py  job_scraper_menu.py  linkedin_jobs.py  matcher.py  mycareersfuture_jobs.py  optimizer.py  project_experience.py  translator.py  wellfound_jobs.py
prompts/: system_prompts.py
resource-admin/: index.html  package-lock.json  package.json
scripts/: build_alias_resume.py  build_alignerr_resume.py  build_arki_resume.py  build_arros_resume.py  build_boku_resume.py  build_bpn_resume.py  build_circles_resume.py  build_coda_resume.py  build_stripe_ai_resume.py  build_sumsub_resume.py  build_wise_resume.py  generate_both_resumes.py  generate_custom_resume.py  generate_wise_resume.py  md_to_pdf.py  run_daily_scan.py
utils/: notion_sync.py  resume_formatter.py  resume_parser.py
website/: index.html
xt-operations-platform/: README.md  start.sh
投递岗位&定制化简历/: AIAlignment Co - AI Investment Strategy Evaluator - JD.md  AIInfra Co - AI Product Manager - JD.md  Candidate（AIAgent Startup - Deployment Strategist）.md  Candidate（AdTech Growth - Content Operations Specialist）.md  Candidate（Blockchain Analytics-Events）.md  Candidate（CryptoData Aggregator - AI Operations Generalist）.md  Candidate（DataInsight AI - IGAi Associate Director）.md  Candidate（ExchangeBeta - Stock Operations Growth）.md  Candidate（Finance Network - FIBD Support）.md  (+17 more)
(+89 files in other folders)
